syntax = "proto3";

import "google/protobuf/any.proto";

package fys.pb;

message LoginErrorResponse {

    enum Type {
        // Server Authentication
        BAD_PASSWORD = 0;
        UNKNOWN = 1;

    }

    Type typeError = 1;

    string user = 2;
}

message AuthenticationResponse {

    bytes token = 1;
}