syntax = "proto3";

import "google/protobuf/any.proto";

package fys.pb;

message FySGtwMessage {

    enum Type {
        AUTH = 0;
        BABBLE = 1;
    }

    Type type = 1;
    google.protobuf.Any content = 2;

}

message FySGtwResponseMessage {

    enum Type {
        AUTH = 0;
        BABBLE = 1;
    }

    Type type = 1;
    google.protobuf.Any content = 2;
    bool isOK = 3;
}